@NoRepositoryBean added to BaseService and BUCKET_NAME and ORGANIZATION are private now in baseRepository